--- a/ArrowFunction.html
+++ b/ArrowFunction.html
@@ -1,7 +1,7 @@
-/*<head>
-    Kavin
+<head>
 </head>
-<body><script> kavin=()=>
+<body><script> 
+let kavin=()=>
     "hvgh";
 console.log(kavin());
 
@@ -26,4 +26,4 @@ console.log(kavin());
 }
 bioData("Kavin M",21,"B+ve");
 </script>
-</body>*/
+</body>
