--- a/Day-18/index.html
+++ b/Day-18/index.html
@@ -7,7 +7,6 @@
 
 </head>
 <body>
-    <h1>Promise</h1>
-    <script src="/Day-18/fetch.js"></script>
+    <script src="/KarthickM/Day-18/fetch.js"></script>
 </body>
 </html>
