--- a/Day-20/index.html
+++ b/Day-20/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/Day-19/script.js"></script>
+    <div class="container "></div>
 </body>
 </html>
