--- a/Magic.html
+++ b/Magic.html
@@ -1,5 +1,63 @@
-<div class="card">
+<!-- <div class="card">
     Magic Card
   </div>
   
-  <a href="https://mythrillfiction.com/" target="_blank">Mythrill</a>
+  <a href="https://mythrillfiction.com/" target="_blank">Mythrill</a> -->
+
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Boys</title>
+    <link rel="icon" href="/KarthickM/Boys.png.jpg">
+    <!-- <link rel="stylesheet" href="/KarthickM/magic.css"> -->
+    <style>
+      table{
+        border-collapse: collapse;
+        border: 2px solid hotpink;
+      }
+      th,td{
+        border: 2px solid orangered;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Love is boy</h1>
+    <h4>Html table</h4>
+    <table>
+      <tr>
+        <th>S.No</th>
+        <th>Name</th>
+        <th>Age</th>
+        <th>Gender</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Kavin M</td>
+        <td>21</td>
+        <td>Male</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Dharun M</td>
+        <td>21</td>
+        <td>Male</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Nirmal Kumar M</td>
+        <td>21</td>
+        <td>Male</td>
+      </tr>
+      <tr>
+        <td>4</td>
+        <td>Karthi G</td>
+        <td>21</td>
+        <td>Male</td>
+      </tr>
+    </table>
+
+    <abbr title="world wide web">www</abbr>
+  </body>
+  </html>
