--- a/HID/index.html
+++ b/HID/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="/Day-19/script.js"></script>
+    <div id="output"></div>
+    <script src="/HID/script.js"></script>
 </body>
 </html>
