--- a/weather/index.html
+++ b/weather/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Async</title>
+    <title>Weather Api</title>
 </head>
 <body>
-    <script src="/Day-18/fetch.js"></script>
+    <button id="btn">weather</button>
+    <script src="/weather/script.js"></script>
 </body>
 </html>
